import React from "react";
import { shallow } from "enzyme";
import { ExpensesSummary } from "../../components/ExpensesSummary";


test('should correctly render espenses summary with 1 expense', () => {
const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={235} />);
expect (wrapper).toMatchSnapshot();
})

test('should correctly render espenses summary with multiple expenses', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={5} expensesTotal={235343} />);
  expect (wrapper).toMatchSnapshot();
})