// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render espenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render espenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $2,353.43
  </h1>
</div>
`;
